# Adventure-of-the-Slime

./: CMakeLists.txt  README.md
.github/workflows/: flawfinder.yml
assets/maps/: cave_map.txt  map.txt
src/: AnimationManager.cpp  AnimationManager.h  SoundPlayer.cpp  SoundPlayer.h  enemy.h  gameDataManager.h  icon.h  main.cpp  slime.cpp  slime.h  tileMap.h  utils.cpp  utils.h
